--- a/MarketPlace.Application/MarketPlace.Application.csproj
+++ b/MarketPlace.Application/MarketPlace.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MarketPlace.Domain\MarketPlace.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
