register Applications services

--- a/MarketPlace.API/appsettings.json
+++ b/MarketPlace.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefCon": "Host=localhost;Port=5432;Database=MarketPlaceDBB;User Id=postgres;Password=root;"
+  }
 }
